--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -9,7 +9,8 @@
         top: 0.5em;
         right: $main-margin;
         /* z-index 11 to alwaus stay on top*/
-        z-index: 11;
+        z-index: 1111;
+        cursor: pointer;
         // ---------------------- Media queries
         @include breakpoint(small) {
             height: 6em;
@@ -46,7 +47,7 @@
         padding: $gutter /2;
         text-decoration: none;
         color: white;
-        font-size: 1.5rem;
+        font-size: 2rem;
         line-height: 1.5;
         transition: 0.5s;
         // ---------------------- Media queries
