--- a/css/main.css
+++ b/css/main.css
@@ -60,11 +60,11 @@
 /*flexboxcontainer for images*/
 .flex-hero {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   flex-direction: row;
   align-items: center;
   width: 100%;
-  height: 40%; }
+  height: 25%; }
 
 /*Elements with images and text about the employee*/
 @-webkit-keyframes figure-start {
@@ -167,78 +167,16 @@
     background: #CCD7E4; }
   100% {
     background: transparent; } }
-.figure {
-  display: flex;
-  align-items: space-around;
-  justify-content: center;
-  flex-direction: column;
-  color: #fff;
-  opacity: 1;
-  height: 4em;
-  width: 4em;
-  margin: 0 0 1em 0;
-  border-radius: 100%;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: 50%;
-  background: #CCD7E4;
-  text-align: center;
-  -webkit-transition: all 0.4s ease;
-  -moz-transition: all 0.4s ease;
-  -ms-transition: all 0.4s ease;
-  -o-transition: all 0.4s ease;
-  transition: all 0.4s ease;
-  -webkit-transform: rotate(-25deg);
-  -moz-transform: rotate(-25deg);
-  -ms-transform: rotate(-25deg);
-  -o-transform: rotate(-25deg);
-  transform: rotate(-25deg);
-  left: 50%;
-  z-index: 10;
-  cursor: pointer; }
-  @media (min-width: 550px) {
-    .figure {
-      background: none; } }
-  .figure.is-active {
-    -webkit-transform: translate(-50%, -50%) rotate(-25deg);
-    -moz-transform: translate(-50%, -50%) rotate(-25deg);
-    -ms-transform: translate(-50%, -50%) rotate(-25deg);
-    -o-transform: translate(-50%, -50%) rotate(-25deg);
-    transform: translate(-50%, -50%) rotate(-25deg);
-    cursor: default;
-    height: 100%;
-    width: 100%;
-    top: 50%;
-    left: 50%;
-    z-index: 1000;
-    top: 50%;
-    left: 50%;
-    overflow: hidden;
-    position: absolute; }
-    .figure.is-active:hover {
-      height: 100%;
-      width: 100%; }
-    .figure.is-active#max {
-      background: url("../images/max2.jpg");
-      background-repeat: no-repeat;
-      background-size: contain; }
-    .figure.is-active#joanna {
-      background: url("../images/joanna2.jpg");
-      background-repeat: no-repeat;
-      background-size: contain; }
-    .figure.is-active#magnus {
-      background: url("../images/magnus2.jpg");
-      background-repeat: no-repeat;
-      background-size: contain; }
-
 /*
+//Images
 .figure {
     display: flex;
-    align-items: center;
+    align-items: space-around;
     justify-content: center;
+    flex-direction: column;
     color: #fff;
     opacity: 1;
-    top: 30%;
+
     height: 4em;
     width: 4em;
     margin: 0 0 1em 0;
@@ -248,10 +186,10 @@
     background-position: 50%;
     background: $light-gray;
     text-align: center;
-    position: absolute;
+    //position:absolute;
 
-    @include transition(all 0.5s ease);
-    @include transform(translate(-50%, -50%) rotate(-25deg));
+    @include transition(all 0.4s ease);
+    @include transform(rotate(-25deg));
     left: 50%;
     z-index: 10;
     cursor: pointer;
@@ -259,29 +197,32 @@
     @include breakpoint(small){
 
     background: none;
-    top: 35%;
+    //top: 35%;
 
 
     };
 
     &:first-child {
-        left: 30%;
+        //left: 30%;
     }
     &:last-child {
-        left: 70%;
+        //left: 70%;
     }
     //class that is set on click when figure is active.
     &.is-active {
+        @include transform(translate(-50%,-50%) rotate(-25deg));
+
         cursor: default;
         height: 100%;
         width: 100%;
         top: 50%;
         left: 50%;
         z-index: 1000;
-        @include transition(all 0.5s ease);
         top: 50%;
         left: 50%;
         overflow: hidden;
+        position:absolute;
+
         &:hover {
             height: 100%;
             width: 100%;
@@ -304,6 +245,78 @@
         }
     }
 }*/
+.figure {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  opacity: 1;
+  top: 40%;
+  height: 5em;
+  width: 5em;
+  margin: 0 0 1em 0;
+  border-radius: 100%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background: #CCD7E4;
+  text-align: center;
+  position: absolute;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  -webkit-transform: translate(-50%, -50%) rotate(-25deg);
+  -moz-transform: translate(-50%, -50%) rotate(-25deg);
+  -ms-transform: translate(-50%, -50%) rotate(-25deg);
+  -o-transform: translate(-50%, -50%) rotate(-25deg);
+  transform: translate(-50%, -50%) rotate(-25deg);
+  left: 50%;
+  z-index: 10;
+  cursor: pointer; }
+  @media screen and (min-width: 360px) {
+    .figure {
+      height: 6.3em;
+      width: 6.3em; } }
+  @media (min-width: 550px) {
+    .figure {
+      background: none; } }
+  .figure:first-child {
+    left: 25%; }
+  .figure:last-child {
+    left: 75%; }
+  .figure.is-active {
+    cursor: default;
+    height: 100%;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    z-index: 1000;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+    top: 50%;
+    left: 50%;
+    overflow: hidden; }
+    .figure.is-active:hover {
+      height: 100%;
+      width: 100%; }
+    .figure.is-active#max {
+      background: url("../images/max2.jpg");
+      background-repeat: no-repeat;
+      background-size: contain; }
+    .figure.is-active#joanna {
+      background: url("../images/joanna2.jpg");
+      background-repeat: no-repeat;
+      background-size: contain; }
+    .figure.is-active#magnus {
+      background: url("../images/magnus2.jpg");
+      background-repeat: no-repeat;
+      background-size: contain; }
+
 @media (min-width: 550px) {
   .hover-figure:hover {
     height: 7em;
@@ -390,24 +403,28 @@
   height: 2em;
   display: inherit;
   z-index: 111;
-  /*
-position: absolute;
-  bottom: 14.5em;
-  left: 46%;  */ }
+  position: absolute;
+  bottom: 15.5em;
+  left: 46%; }
   .ghicon.active {
     display: inline;
     cursor: pointer; }
   .ghicon:hover {
     cursor: pointer; }
+  @media screen and (min-width: 360px) {
+    .ghicon {
+      bottom: 18em; } }
+  @media (min-width: 400px) {
+    .ghicon {
+      bottom: 17em; } }
 
 .arrow {
   display: none;
   z-index: 111;
   height: 2em;
-  /*
-position: absolute;
+  position: absolute;
   bottom: 1em;
-  left: 47%;  */
+  left: 47%;
   -webkit-transition: all 1s ease;
   -moz-transition: all 1s ease;
   -ms-transition: all 1s ease;
@@ -453,11 +470,11 @@ position: absolute;
   text-align: left;
   word-wrap: break-word;
   width: 80%;
-  /*
-position: absolute;
+  position: absolute;
   left: -24%;
-  top: 30%;  */
+  top: 30%;
   margin: 2em 8em 0 8em;
+  position: absolute;
   color: #fff; }
   .profile-text.active {
     display: inline;
@@ -484,14 +501,17 @@ position: absolute;
     animation-fill-mode: forwards;
     animation-iteration-count: 1;
     z-index: 111; }
+  @media (min-width: 400px) {
+    .profile-text {
+      left: -20%; } }
 
 .profile-name {
-  /*
-left: -15%;
-  top: 0%;  */
+  left: -10%;
+  top: 0%;
   display: none;
   font-size: 1.2em;
-  text-align: left; }
+  text-align: left;
+  position: absolute; }
   .profile-name.active {
     display: inline;
     opacity: 1;
@@ -517,6 +537,10 @@ left: -15%;
     animation-fill-mode: forwards;
     animation-iteration-count: 1;
     z-index: 111; }
+  @media (min-width: 400px) {
+    .profile-name {
+      left: -5%;
+      top: 5%; } }
 
 .hero-text-container {
   -webkit-transition: all 1s ease;
@@ -543,6 +567,9 @@ left: -15%;
   -ms-transform: rotate(25deg);
   -o-transform: rotate(25deg);
   transform: rotate(25deg); }
+  @media screen and (min-width: 360px) {
+    .hero-h1 {
+      font-size: 5em; } }
   @media (min-width: 400px) {
     .hero-h1 {
       font-size: 5em; } }
