--- a/sass/_landing.scss
+++ b/sass/_landing.scss
@@ -62,13 +62,12 @@
 /*flexboxcontainer for images*/
 
 .flex-hero {
-
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
-    align-items: center;
-    width: 100%;
-    height: 40%;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  height: 25%;
 
 }
 
@@ -97,6 +96,7 @@
 }
 
 ;
+/*
 //Images
 .figure {
     display: flex;
@@ -173,17 +173,20 @@
             background-size: contain;
         }
     }
-}
-/*
+}*/
+
+
+
 .figure {
+
     display: flex;
     align-items: center;
     justify-content: center;
     color: #fff;
     opacity: 1;
-    top: 30%;
-    height: 4em;
-    width: 4em;
+    top: 40%;
+    height: 5em;
+    width: 5em;
     margin: 0 0 1em 0;
     border-radius: 100%;
     background-size: contain;
@@ -192,26 +195,26 @@
     background: $light-gray;
     text-align: center;
     position: absolute;
-
     @include transition(all 0.5s ease);
     @include transform(translate(-50%, -50%) rotate(-25deg));
     left: 50%;
     z-index: 10;
     cursor: pointer;
 
+    @media screen and (min-width:360px){
+      height: 6.3em;
+      width: 6.3em;
+    }
+
     @include breakpoint(small){
-
-    background: none;
-    top: 35%;
-
-
+      background: none;
     };
 
     &:first-child {
-        left: 30%;
+      left: 25%;
     }
     &:last-child {
-        left: 70%;
+      left: 75%;
     }
     //class that is set on click when figure is active.
     &.is-active {
@@ -246,7 +249,7 @@
             background-size: contain;
         }
     }
-}*/
+}
 
 
 
@@ -314,21 +317,27 @@
     height: 2em;
     display: inherit;
     z-index: 111;
-    /*
-  position: absolute;
-    bottom: 14.5em;
-    left: 46%;  */
+    position: absolute;
+    bottom: 15.5em;
+    left: 46%;
+
 
 
     &.active {
         display: inline;
-
         cursor: pointer;
 
     }
     &:hover {
         cursor: pointer;
     }
+    @media screen and (min-width:360px){
+      bottom: 18em;
+    }
+    @include breakpoint(xsmall){
+      bottom: 17em;
+    };
+
 }
 
 //Icon that is pressed to go bacm from profile.
@@ -336,10 +345,10 @@
     display: none;
     z-index: 111;
     height: 2em;
-    /*
-  position: absolute;
+
+    position: absolute;
     bottom: 1em;
-    left: 47%;  */
+    left: 47%;
 
 
     @include transition(all 1s ease);
@@ -366,14 +375,14 @@
     text-align: left;
     word-wrap: break-word;
     width: 80%;
-    /*
-  position: absolute;
+
+    position: absolute;
     left: -24%;
-    top: 30%;  */
+    top: 30%;
 
 
     margin: 2em 8em 0 8em;
-    //position: absolute;
+    position: absolute;
     color: #fff;
     &.active {
         display: inline;
@@ -384,18 +393,21 @@
         1);
         z-index: 111;
     }
+    @include breakpoint(xsmall){
+      left: -20%;
+    };
 }
 
 .profile-name {
-    /*
-  left: -15%;
-    top: 0%;  */
+
+    left: -10%;
+    top: 0%;
 
 
     display: none;
     font-size: 1.2em;
     text-align: left;
-    //position: absolute;
+    position: absolute;
     &.active {
         display: inline;
         opacity: 1;
@@ -405,6 +417,10 @@
         1);
         z-index: 111;
     }
+    @include breakpoint(xsmall){
+      left: -5%;
+      top:5%;
+    };
 }
 
 // Text inside of profile-figures.
@@ -431,6 +447,9 @@
     font-size: 3em;
     margin: 0;
     @include transform(rotate(25deg));
+    @media screen and (min-width:360px){
+      font-size: 5em;
+    }
     @include breakpoint(xsmall){
       font-size: 5em;
     };
